--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "server": "pm2 start ecosystem.config.js --watch",
     "lint": "next lint"
   },
   "dependencies": {
@@ -20,6 +21,7 @@
     "immer": "^10.1.1",
     "next": "14.2.11",
     "next-i18next": "^15.3.1",
+    "pm2": "^5.4.2",
     "react": "^18",
     "react-content-loader": "^7.0.2",
     "react-cookies": "^0.1.1",
