--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next-i18next": "^15.3.1",
     "pm2": "^5.4.2",
     "react": "^18",
+    "react-calendar": "^5.0.0",
     "react-content-loader": "^7.0.2",
     "react-cookies": "^0.1.1",
     "react-dom": "^18",
