--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.7.7",
     "ckeditor5": "^43.1.0",
     "classnames": "^2.5.1",
+    "cookies-next": "^4.2.1",
     "date-fns": "^4.0.0",
     "i18next": "^23.15.1",
     "i18next-browser-languagedetector": "^8.0.0",
@@ -24,6 +25,7 @@
     "pm2": "^5.4.2",
     "react": "^18",
     "react-content-loader": "^7.0.2",
+    "react-cookie": "^7.2.0",
     "react-cookies": "^0.1.1",
     "react-dom": "^18",
     "react-i18next": "^15.0.2",
