--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "immer": "^10.1.1",
     "next": "14.2.11",
     "next-i18next": "^15.3.1",
+    "next-themes": "^0.3.0",
     "pm2": "^5.4.2",
     "react": "^18",
     "react-calendar": "^5.0.0",
