--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-i18next": "^15.0.2",
     "react-icons": "^5.3.0",
     "react-modal": "^3.16.1",
+    "react-router-dom": "^6.26.2",
     "sass": "^1.78.0",
     "styled-components": "^6.1.13"
   },
