--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-i18next": "^15.0.2",
     "react-icons": "^5.3.0",
     "react-modal": "^3.16.1",
+    "react-router-dom": "^6.26.2",
     "react-select": "^5.8.1",
     "sass": "^1.78.0",
     "styled-components": "^6.1.13"
