--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.26.2",
     "react-select": "^5.8.1",
+    "react-time-picker": "^7.0.0",
     "sass": "^1.78.0",
     "styled-components": "^6.1.13"
   },
